# ropt-everest

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml  static-checks.yml  tests.yml
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+250 more)
.mypy_cache/3.11/IPython/: display.data.json  display.meta.json
.mypy_cache/3.11/PIL/: ExifTags.data.json  ExifTags.meta.json  GimpGradientFile.data.json  GimpGradientFile.meta.json  GimpPaletteFile.data.json  GimpPaletteFile.meta.json  Image.data.json  Image.meta.json  ImageCms.data.json  ImageCms.meta.json  ImageColor.data.json  ImageColor.meta.json  ImageFile.data.json  ImageFile.meta.json  ImageFilter.data.json  ImageFilter.meta.json  ImageMode.data.json  ImageMode.meta.json  ImageOps.data.json  ImageOps.meta.json  ImagePalette.data.json  ImagePalette.meta.json  ImageQt.data.json  ImageQt.meta.json  PaletteFile.data.json  PaletteFile.meta.json  TiffImagePlugin.data.json  TiffImagePlugin.meta.json  TiffTags.data.json  TiffTags.meta.json  __init__.data.json  __init__.meta.json  _binary.data.json  _binary.meta.json  _deprecate.data.json  _deprecate.meta.json  _imaging.data.json  _imaging.meta.json  _imagingcms.data.json  _imagingcms.meta.json  (+6 more)
.mypy_cache/3.11/PyQt6/: QtCore.meta.json  QtGui.meta.json  __init__.data.json  __init__.meta.json  sip.data.json  sip.meta.json
.mypy_cache/3.11/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  doctest.meta.json  fixtures.data.json  fixtures.meta.json  freeze_support.data.json  freeze_support.meta.json  helpconfig.data.json  helpconfig.meta.json  hookspec.data.json  hookspec.meta.json  legacypath.data.json  legacypath.meta.json  logging.data.json  logging.meta.json  main.data.json  main.meta.json  monkeypatch.data.json  monkeypatch.meta.json  nodes.data.json  nodes.meta.json  outcomes.data.json  outcomes.meta.json  pathlib.data.json  pathlib.meta.json  (+34 more)
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.11/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/asttokens/: __init__.data.json  __init__.meta.json  astroid_compat.data.json  astroid_compat.meta.json  asttokens.data.json  asttokens.meta.json  line_numbers.data.json  line_numbers.meta.json  mark_tokens.data.json  mark_tokens.meta.json  util.data.json  util.meta.json
.mypy_cache/3.11/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  locks.meta.json  mixins.data.json  mixins.meta.json  protocols.data.json  protocols.meta.json  queues.data.json  queues.meta.json  runners.data.json  runners.meta.json  selector_events.data.json  selector_events.meta.json  streams.data.json  streams.meta.json  subprocess.data.json  subprocess.meta.json  taskgroups.data.json  taskgroups.meta.json  tasks.data.json  tasks.meta.json  threads.data.json  threads.meta.json  timeouts.data.json  timeouts.meta.json  transports.data.json  transports.meta.json  unix_events.data.json  unix_events.meta.json
.mypy_cache/3.11/attr/: __init__.data.json  __init__.meta.json  _cmp.data.json  _cmp.meta.json  _typing_compat.data.json  _typing_compat.meta.json  _version_info.data.json  _version_info.meta.json  converters.data.json  converters.meta.json  exceptions.data.json  exceptions.meta.json  filters.data.json  filters.meta.json  setters.data.json  setters.meta.json  validators.data.json  validators.meta.json
.mypy_cache/3.11/attrs/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.11/concurrent/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/ctypes/: __init__.data.json  __init__.meta.json  _endian.data.json  _endian.meta.json  wintypes.data.json  (+1 more)
dev/: 404.html  index.html  objects.inv
dev/search/: search_index.json
docs/: index.md
docs/reference/: everest_plan.md  reference.md
docs/usage/: basics.md  everest_config.md  examples.md  running.md
examples/mathfunc/: README.md  basic.py  config_advanced_scipy.py  config_advanced_scipy.yml  config_example.py  config_example.yml  evaluator.py  loop.py  two.py
examples/rosenbrock/: config_rosenbrock.py  config_rosenbrock.yml
src/ropt_everest/: __init__.py  _cached_evaluator.py  _evaluator.py  _everest_config.py  _everest_plan.py  _everest_run_plan.py  _handler_mixin.py  _optimizer.py  _results_table.py  _run_script.py  _step_mixin.py  _store.py  _tracker.py  _utils.py  _workflow_job.py  everest.py
test-data/math_func/: abort.py  config_minimal.yml  workflow_fail.py  workflow_job.py
tests/: conftest.py  test_everest.py  test_examples.py
usage/: basics.md  everest_config.md  examples.md  running.md
(+1771 files in other folders)
