[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ropt-everest"
description = "A ropt plugin to extend Everest functionality"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["tabulate", "numpy"]

[project.urls]
"Homepage" = "https://github.com/TNO-ropt/ropt-everest"
"Repository" = "https://github.com/TNO-ropt/ropt-everest"
"Bug Tracker" = "https://github.com/TNO-ropt/ropt-everest/issues"
"Documentation" = "https://tno-ropt.github.io/ropt-everest"

[project.entry-points."ropt.plugins.plan_step"]
everest = "ropt_everest.everest:EverestPlanStepPlugin"

[project.entry-points."ropt.plugins.evaluator"]
everest = "ropt_everest.everest:EverestEvaluatorPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ropt_everest = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "ropt_everest.version.__version__" }

[tool.setuptools_scm]
write_to = "src/ropt_everest/version.py"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:numpy.ndarray size changed, may indicate binary incompatibility.*:RuntimeWarning',
]


[tool.ruff.format]
exclude = ["src/ropt_everest/version.py", "build"]

[tool.ruff.lint]
exclude = ["test-data/*"]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "E501",   # line-too-lone
    "S101",   # assert
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",    # module-import-not-at-top-of-file
    "D",       # pydocstyle
    "ANN401",  # anytype
    "FBT",     # flake8-boolean-trap
    "PLR2004", # magic-value-comparison
    "PLR0913", # too-many-arguments
]
"examples/*" = [
    "PGH004", # blanket-noqa
    "T201",   # print
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["everest.*", "ert.*"]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "mike",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pandas-stubs",
    "pytest",
    "ruff",
]
